# multiregex

./: .copier-answers.yml  .flake8  .gitattributes  .gitignore  .lefthook.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.rst  LICENSE  README.md  SECURITY.md  ahocorasick.pyi  environment.yml  mkdocs.yml  pixi.toml  pyproject.toml  setup.cfg  setup.py
.conda_lock_files/: py312_osx64.yml  py312_win64.yml  py36_lin64.yml  py36_linux64.yml  py36_osx64.yml  py36_win64.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: .condarc  build.yml  ci.yml  pre-commit-autoupdate.yml  scorecard.yml  tag.yml
conda.recipe/: meta.yaml
docs/: api-documentation.md  conf.py  index.md  index.rst
docs/styles/: custom.css
multiregex/: __init__.py
src/: ahocorasick.pyi
src/multiregex/: __init__.py
stubs/: ahocorasick.pyi
test_utils/: __init__.py  cpython_test_re.py
tests/: conftest.py  test_bench.py  test_core.py  test_cpython_tests.py  test_multiregex.py
