[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "multiregex"
authors = [
  {name = "Jonas Haag", email = "jonas.haag@quantco.com"}
]

maintainers = [{name = "Jonas Haag", email = "jonas.haag@quantco.com"}]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/quantco/multiregex"

[tool.flit.sdist]
exclude = [".gitignore"]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "multiregex"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
allow_redefinition = true

[tool.pytest.ini_options]
# This will be pytest's future default.
addopts = "--import-mode=importlib"
