[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]

[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "multiregex"
authors = [
  { name = "QuantCo, Inc.", email = "noreply@quantco.com" },
  { name = "Jonas Haag", email = "jonas@lophus.org" },
]
description = "Quickly match many regexes against a string. Provides 2-10x speedups over naïve regex matching."

maintainers = [{ name = "Bela Stoyan", email = "bela.stoyan@quantco.com" }]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.8"

dependencies = ["pyahocorasick"]
readme = "README.md"
dynamic = ["version"]

[project.urls]
Home = "https://github.com/quantco/multiregex"

[tool.setuptools]
packages = ["multiregex"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "multiregex"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[tool.mypy]
mypy_path = "stubs"
python_version = "3.8"
no_implicit_optional = true
check_untyped_defs = true
allow_redefinition = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.pytest.ini_options]
# This will be pytest's future default.
addopts = "--import-mode=importlib --color=yes"

[tool.typos.files]
extend-exclude = ["test_utils/cpython_test_re.py"]
