[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]

[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "multiregex"
description = "Quickly match many regexes against a string. Provides 2-10x speedups over naïve regex matching."
authors = [
  { name = "QuantCo, Inc.", email = "noreply@quantco.com" },
  { name = "Jonas Haag", email = "jonas@lophus.org" },
]
dynamic = ["version"]
maintainers = [{ name = "Bela Stoyan", email = "bela.stoyan@quantco.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
readme = "README.md"
dependencies = ["pyahocorasick"]

[project.urls]
repository = "https://github.com/quantco/multiregex"

[tool.setuptools.packages.find]
include = ["multiregex"]

[project.scripts]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "N803", # https://docs.astral.sh/ruff/rules/invalid-argument-name
  "N806", # https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function
  "E501", # https://docs.astral.sh/ruff/faq/#is-the-ruff-linter-compatible-with-black
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = '3.9'
no_implicit_optional = true
check_untyped_defs = true
allow_redefinition = true
mypy_path = "stubs"

# If you run into `missing library stubs or py.typed marker` errors
# and no stubs are available for this library, you can add an override
# to ignore the missing imports.
# [[tool.mypy.overrides]]
# module = ["my_module"]
# ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.typos.files]
extend-exclude = ["test_utils/cpython_test_re.py"]
