[metadata]
name = multiregex
description = Quickly match many regexes against a string.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Quantco/multiregex
author = QuantCo, Inc.
author_email = noreply@quantco.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
install_requires =
python_requires = >=3.8
packages = find:


[options.packages.find]
include=
    multiregex

[options.entry_points]
console_scripts =
